review: addressing comments
